--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "teacher-Timer",
-  "Version": "1.0.0",
-  "private": true
+  "name": "teacher-timer",
+  "version": "1.0.0",
+  "private": true,
   "dependencies": {
     "react": "^18.0.0",
-    "react": "^18.0.0"
+    "react-dom": "^18.0.0",
     "react-scripts": "5.0.1"
   },
   "scripts": {
