--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "teacher-timer",
   "version": "1.0.0",
   "private": true,
+  "homepage": "./",
   "dependencies": {
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
