--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "private": true,
   "homepage": "./",
   "dependencies": {
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-scripts": "5.0.1"
-  },
+  "react": "^18.0.0",
+  "react-dom": "^18.0.0",
+  "tailwindcss": "^3.0.0",
+  "clsx": "^2.0.0"
+}
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
