--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "react": "^18.0.0",
   "react-dom": "^18.0.0",
   "tailwindcss": "^3.0.0",
-  "clsx": "^2.0.0"
+  "clsx": "^2.0.0",
+  "react-scripts": "^5.0.1"
+
 },
   "scripts": {
     "start": "react-scripts start",
